--- a/about.html
+++ b/about.html
@@ -12,13 +12,13 @@
     <header class="site-header">
         <div class="container d-flex justify-content-between align-items-center">
           <div class="logo">
-            <a href="#"><img src="image/logo.png" alt="Site Logo"></a>
+            <a href="#"><img src="image/logo.png" alt="Site Logo" class="logo"></a>
           </div>
           <nav class="main-menu d-flex align-items-center">
             <ul class="d-flex align-items-center p-0 m-0 gap-5">
-              <li><a href="#" class="text-decoration-none">Home</a></li>
+              <li><a href="home.html" class="text-decoration-none">Home</a></li>
               <li><a href="#" class="text-decoration-none">Services</a></li>
-              <li><a href="#" class="text-decoration-none">About</a></li>
+              <li><a href="about.html" class="text-decoration-none">About</a></li>
               <li><a href="#" class="text-decoration-none">Products</a></li>
               <li id="get-in-touch">Get in touch 
                 <svg width="20" height="25" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -40,14 +40,14 @@
         <section class="inner-banner-sec">
             <div class="container text-center">
                 <h1 class="common-heading">We’re a passion & inovation-driven company, crafting advanced software solutions.</h1>
-                <a href="#" class="commom-btn mt-3"><svg class="me-2 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <a href="#" class="commom-btn mt-3"><svg class="me-3 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2.30859 0.573712C1.6994 0.573712 1.20555 1.06756 1.20555 1.67676C1.20555 2.28595 1.6994 2.7798 2.30859 2.7798V0.573712ZM2.30859 2.7798H18.5699V0.573712H2.30859V2.7798Z" fill="#222222"/>
                     <path d="M16.5234 18.6773C16.5188 19.2987 17.0188 19.807 17.6402 19.8126C18.2615 19.8182 18.7689 19.319 18.7735 18.6977L16.5234 18.6773ZM18.7735 18.6977L18.8987 1.68719L16.6486 1.66683L16.5234 18.6773L18.7735 18.6977Z" fill="#222222"/>
                     <path d="M1.11353 18.3852C0.623945 18.9281 0.623945 19.8083 1.11353 20.3511C1.60311 20.894 2.39689 20.894 2.88647 20.3511L1.11353 18.3852ZM2.88647 20.3511L18.2273 3.3403L16.4544 1.37436L1.11353 18.3852L2.88647 20.3511Z" fill="#222222"/>
                     </svg>Get in touch</a>
-                    <img src="./image/about-p.png" class="mt-5 w-100">
+                    <img src="./image/about-p.png" class="mt-md-5 mt-4 w-100">
             </div>
-        </scetion>
+        </section>
 
         <section class="about-sec">
             <div class="container">
@@ -57,18 +57,33 @@
                 </div>
 
                 <div class="row mt-5">
-                    <div class="col-md-6">
+                    <div class="col-md-6 d-lg-block d-none">
                         <div class="about-text">
                             <p>Established in 2012 in Texas, USA, we have dedicated years to achieving excellence in Windows application development, embedded applications, and firmware development. As a privately funded and privately owned company, we have experienced exponential growth, generating multimillion-dollar revenues.</p>
                         </div>
                         <img src="./image/a-1.png" class="w-100 mt-5 ">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 d-lg-block d-none">
                         <img src="./image/a-2.png" class="w-100 mb-5">
                         <div class="about-text">
                             <h4>Mehul Patel (CEO and CTO)</h4>
                             <p>Bringing over 25 years of leadership experience in the tech industry. With a strong background in engineering, business development, and strategic planning, Mehul has successfully led IndiLogic for decades. His visionary leadership is dedicated to driving IndiLogic to new heights</p>
                             <p class="pt-3">His leadership has been instrumental in developing IndiLogic's flagship products, ensuring they are robust, reliable, and future-ready. Outside of work, Mehul is an avid coder who enjoys mentoring young engineers. He firmly believes in the power of technology to change the world and is continually exploring new ways to innovate and inspire the next generation of tech leaders</p>
+                        </div>
+                    </div>
+                    <div class="col-12 d-lg-none d-block">
+                        <img src="./image/a-2.png" class="w-100 mt-5 ">
+                        <div class="about-text pt-4 ">
+                            <p class="text-center mw-100">Established in 2012 in Texas, USA, we have dedicated years to achieving excellence in Windows application development, embedded applications, and firmware development.</p>
+                            <p class="text-center mw-100">As a privately funded and privately owned company, we have experienced exponential growth, generating multimillion-dollar revenues.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 d-lg-none d-block pt-5">
+                        <img src="./image/a-1.png" class="w-100 mb-5">
+                        <div class="about-text text-center">
+                            <h4>Mehul Patel (CEO and CTO)</h4>
+                            <p class="mw-100">Bringing over 25 years of leadership experience in the tech industry. With a strong background in engineering, business development, and strategic planning, Mehul has successfully led IndiLogic for decades. His visionary leadership is dedicated to driving IndiLogic to new heights</p>
+                            <p class="mw-100 pt-3">His leadership has been instrumental in developing IndiLogic's flagship products, ensuring they are robust, reliable, and future-ready. Outside of work, Mehul is an avid coder who enjoys mentoring young engineers. He firmly believes in the power of technology to change the world and is continually exploring new ways to innovate and inspire the next generation of tech leaders</p>
                         </div>
                     </div>
                 </div>
@@ -109,6 +124,105 @@
                 </div>
             </div>
         </section>
+
+        <section class="core-value">
+            <div class="container">
+                <div class="text-part">
+                    <h4 class="text-white">CORE VALUES</h4>
+                </div>
+                <div class="row text-white">
+                    <div class="col-md-6">
+                        <div class="chooes-content">
+                            <h4>Customer-Centricity</h4>
+                            <p>Our clients are at the heart of everything we do. We listen, understand, and go the extra mile to meet their needs and exceed their expectations</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="chooes-content">
+                            <h4>Quality and Reliability</h4>
+                            <p>We are committed to delivering products and services of the highest quality. We adhere to the highest standards and take pride in our work</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="chooes-content">
+                            <h4>Innovation and Continuous Improvement</h4>
+                            <p>We embrace creativity and continuous improvement. We strive to push the boundaries of technology to deliver cutting-edge solutions</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="chooes-content">
+                            <h4>Collaboration and Teamwork</h4>
+                            <p>We believe that the best results are achieved  through collaboration. Our team is our greatest asset, and we work together to solve complex problems and deliver exceptional results</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="four-sec about-sussess">
+            <div class="container">
+                <div class="common-title text-white">
+                    <h4>SUCCESS  STORY </h4>
+                    <h3>Products delivered partnering with Dell Technologies</h3>
+                    <p> <b>At Indilogic LLC,</b> we take pride in delivering top quality products and services that exceed industry standards. Our collabrations with <b>DELL Technologies</b> as trusted strategic partner has resulted in products that are used by over <b>16+ million users worldwide.</b></p>
+                </div>
+                <div class="img-content-sec text-white">
+                    <div class="img-content default-zoom">
+                        <div class="img-wrapper">
+                            <img src="image/mouse.png" alt="Dell Peripheral Manager" class="hover-image ">
+                        </div>
+                        <h4>Alienware Command Center</h4>
+                        <p>Integral part of Alienware Command Center core architecture team. Delivered Alienware Hivemind project for Alpha console. </p>
+                    </div>
+                    <div class="img-content">
+                        <div class="img-wrapper">
+                            <img src="image/img-1.png" class="hover-image">
+                        </div>
+                        <h4>Dell Peripheral Manager</h4>
+                        <p>A cutting-edge software enabling users to manage Dell peripherals such as webcams and keyboards with ease and efficiency.</p>
+                    </div>
+                    <div class="img-content">
+                        <div class="img-wrapper">
+                            <img src="image/img-2.png" class="hover-image">
+                        </div>
+                        <h4>Dell Pair</h4>
+                        <p>Seamlessly connects Bluetooth devices to Dell systems, providing a hassle-free user experience for connectivity</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="dell">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-3">
+                        <img src="image/dell.png">
+                    </div>
+                    <div class="col-1">
+                        <div class="middle-boder"></div>
+                    </div>
+                    <div class="col-8">
+                        <div class="dell-text text-white">
+                            <h1>Proud Strategic Partners of Dell Technologies</h1>
+                            <p>At IndiLogic, we’re honored to be a strategic partner of Dell, a global leader in technology innovation. This collaboration empowers us to deliver cutting-edge solutions that drive digital transformation and success for our clients. Together, we’re shaping the future of technology.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="common-connect">
+            <div class="container">
+                <div class="connect text-center mt-0">
+                    <h2>How can we help you? Let's connect.</h2>
+                    <a href="#" class="text-decoration-none"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M2.30664 0.131329C1.69745 0.131329 1.20359 0.625179 1.20359 1.23438C1.20359 1.84357 1.69745 2.33742 2.30664 2.33742V0.131329ZM2.30664 2.33742H18.5679V0.131329H2.30664V2.33742Z" fill="white"/>
+                        <path d="M16.5234 18.2349C16.5188 18.8563 17.0188 19.3646 17.6402 19.3702C18.2615 19.3758 18.7689 18.8767 18.7735 18.2553L16.5234 18.2349ZM18.7735 18.2553L18.8987 1.24481L16.6486 1.22444L16.5234 18.2349L18.7735 18.2553Z" fill="white"/>
+                        <path d="M1.11353 17.9428C0.623945 18.4857 0.623945 19.3659 1.11353 19.9088C1.60311 20.4516 2.39689 20.4516 2.88647 19.9088L1.11353 17.9428ZM2.88647 19.9088L18.2273 2.89792L16.4544 0.931977L1.11353 17.9428L2.88647 19.9088Z" fill="white"/>
+                        </svg>Connect</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -116,7 +230,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 first-sec-footer">
-                        <img src="image/footer-logo.png" class="f-logo ">
+                        <img src="image/logo.png" class="logo">
                         <div class="social-icon d-md-block d-none">
                             <a href="#"><img src="image/Facebook.png"></a>
                             <a href="#"><img src="image/Linkedin.png"></a>
@@ -133,6 +247,7 @@
                                         <li><a href="#" class="text-decoration-none">Home</a></li>
                                         <li><a href="#" class="text-decoration-none">Services</a></li>
                                         <li><a href="#" class="text-decoration-none">About us</a></li>
+                                        <li><a href="#" class="text-decoration-none">products</a></li>
                                         <li><a href="#" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
                                         <li><a href="#" class="text-decoration-none">Trademark Disclaimer</a></li>
