--- a/home.html
+++ b/home.html
@@ -11,13 +11,13 @@
     <header class="site-header">
         <div class="container d-flex justify-content-between align-items-center">
           <div class="logo">
-            <a href="#"><img src="image/logo.png" alt="Site Logo"></a>
+            <a href="#"><img src="image/logo.png" alt="Site logo" class="logo"></a>
           </div>
           <nav class="main-menu d-flex align-items-center">
             <ul class="d-flex align-items-center p-0 m-0 gap-5">
               <li><a href="#" class="text-decoration-none">Home</a></li>
               <li><a href="#" class="text-decoration-none">Services</a></li>
-              <li><a href="#" class="text-decoration-none">About</a></li>
+              <li><a href="about.html" class="text-decoration-none">About</a></li>
               <li><a href="#" class="text-decoration-none">Products</a></li>
               <li id="get-in-touch">Get in touch 
                 <svg width="20" height="25" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -63,7 +63,7 @@
             <div class="icon-box container">
                 <div class="row p-md-4">
                     <div class="col-lg-3 col-6">
-                        <a href="#Development1">
+                        <a href="#Development1" class="icon-1">
                             <div class="icon-content text-center">
                                 <svg width="106" height="106" viewBox="0 0 106 106" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_656_386)">
@@ -110,7 +110,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-6">
-                        <a href="#Development2">
+                        <a href="#Development2" class="icon">
                             <div class="icon-content text-center">
                                 <svg width="106" height="106" viewBox="0 0 106 106" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M44.5701 19.9997H25.7901C25.0293 19.988 24.274 20.1308 23.5701 20.4196C22.5096 20.854 21.6032 21.5953 20.9671 22.5484C20.331 23.5015 19.9942 24.6229 20.0001 25.7686V44.5152C19.9964 45.274 20.1429 46.0259 20.4312 46.7278C20.7196 47.4296 21.144 48.0674 21.6801 48.6045C22.2176 49.1456 22.8584 49.5731 23.5644 49.8617C24.2705 50.1502 25.0274 50.2939 25.7901 50.2842H44.5701C46.0855 50.2815 47.5384 49.6799 48.6118 48.6104C49.6853 47.5409 50.2922 46.0903 50.3001 44.5752V25.7086C50.2922 24.1935 49.6853 22.743 48.6118 21.6735C47.5384 20.604 46.0855 20.0023 44.5701 19.9997ZM47.1801 44.4552C47.1623 45.1408 46.8813 45.7932 46.3953 46.2771C45.9094 46.7611 45.2558 47.0396 44.5701 47.0548H25.7901C25.1043 47.0396 24.4508 46.7611 23.9648 46.2771C23.4789 45.7932 23.1979 45.1408 23.1801 44.4552V25.7086C23.1979 25.0231 23.4789 24.3707 23.9648 23.8867C24.4508 23.4027 25.1043 23.1243 25.7901 23.1091H44.5701C45.2558 23.1243 45.9094 23.4027 46.3953 23.8867C46.8813 24.3707 47.1623 25.0231 47.1801 25.7086V44.4552Z" fill="#606060"/>
@@ -124,7 +124,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-6">
-                        <a href="#Development3">
+                        <a href="#Development3" class="icon">
                             <div class="icon-content text-center">
                                 <svg width="106" height="106" viewBox="0 0 106 106" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M55.7184 65.8332L65.7886 55.7598C66.4391 55.0956 66.801 54.2014 66.7956 53.2716C66.7993 52.3392 66.4378 51.4424 65.7886 50.7734L55.7184 40.6999C55.3909 40.3759 55.0025 40.12 54.5756 39.9471C54.1486 39.7742 53.6916 39.6877 53.2311 39.6926C52.2981 39.6845 51.4 40.0467 50.7336 40.6999L40.6635 50.7734C40.0105 51.44 39.6483 52.3384 39.6564 53.2716C39.6516 53.7323 39.738 54.1895 39.9109 54.6166C40.0837 55.0436 40.3395 55.4322 40.6635 55.7598L50.7336 65.8332C51.3959 66.492 52.292 66.8619 53.226 66.8619C54.16 66.8619 55.0561 66.492 55.7184 65.8332ZM42.315 52.4154L46.5243 48.2047L49.8173 51.4987C50.0426 51.6926 50.3328 51.7942 50.6298 51.7831C50.9269 51.772 51.2087 51.649 51.4189 51.4387C51.6291 51.2285 51.752 50.9465 51.7632 50.6494C51.7743 50.3523 51.6727 50.0619 51.4788 49.8366L48.196 46.5425L52.4053 42.3318C52.5152 42.2225 52.6457 42.136 52.7891 42.0773C52.9325 42.0185 53.0861 41.9886 53.2411 41.9893C53.3946 41.9888 53.5466 42.0189 53.6884 42.0777C53.8301 42.1365 53.9588 42.2229 54.0669 42.3318L64.1371 52.4053C64.3532 52.6304 64.4756 52.9293 64.4794 53.2414C64.4761 53.5506 64.3534 53.8466 64.1371 54.0674L63.0193 55.2561L59.5853 51.8311C59.3667 51.6152 59.0718 51.4941 58.7646 51.4941C58.4574 51.4941 58.1625 51.6152 57.9439 51.8311C57.725 52.0502 57.602 52.3473 57.602 52.6571C57.602 52.9669 57.725 53.264 57.9439 53.4832L61.3778 56.9081L56.8664 61.421L53.4425 57.986C53.2235 57.767 52.9265 57.644 52.6168 57.644C52.3071 57.644 52.0101 57.767 51.791 57.986C51.5752 58.2047 51.4541 58.4997 51.4541 58.807C51.4541 59.1143 51.5752 59.4093 51.791 59.628L55.2149 63.063L54.087 64.1913C53.9789 64.3002 53.8503 64.3866 53.7085 64.4454C53.5668 64.5042 53.4147 64.5342 53.2613 64.5337C53.1063 64.5345 52.9527 64.5046 52.8092 64.4458C52.6658 64.387 52.5354 64.3005 52.4254 64.1913L42.3553 54.1178C42.2463 54.0097 42.16 53.881 42.1012 53.7392C42.0424 53.5973 42.0124 53.4453 42.0129 53.2918C42.0014 53.1328 42.0222 52.9732 42.0742 52.8226C42.1261 52.672 42.208 52.5334 42.315 52.4154Z" fill="#606060"/>
@@ -137,7 +137,7 @@
                          </a>
                     </div>
                     <div class="col-lg-3 col-6">
-                        <a href="#Development4">
+                        <a href="#Development4" class="icon">
                             <div class="icon-content text-center">
                                 <svg width="106" height="106" viewBox="0 0 106 106" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_656_385)">
@@ -338,7 +338,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 first-sec-footer">
-                        <img src="image/footer-logo.png" class="f-logo ">
+                        <img src="image/logo.png" class="logo">
                         <div class="social-icon d-md-block d-none">
                             <a href="#"><img src="image/Facebook.png"></a>
                             <a href="#"><img src="image/Linkedin.png"></a>
@@ -355,6 +355,7 @@
                                         <li><a href="#" class="text-decoration-none">Home</a></li>
                                         <li><a href="#" class="text-decoration-none">Services</a></li>
                                         <li><a href="#" class="text-decoration-none">About us</a></li>
+                                        <li><a href="#" class="text-decoration-none">products</a></li>
                                         <li><a href="#" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
                                         <li><a href="#" class="text-decoration-none">Trademark Disclaimer</a></li>
