--- a/home.html
+++ b/home.html
@@ -16,9 +16,9 @@
           <nav class="main-menu d-flex align-items-center">
             <ul class="d-flex align-items-center p-0 m-0 gap-5">
               <li><a href="home.html" class="text-decoration-none">Home</a></li>
-              <li><a href="service.html" class="text-decoration-none">Services</a></li>
+              <li><a href="#" class="text-decoration-none">Services</a></li>
               <li><a href="about.html" class="text-decoration-none">About</a></li>
-              <li><a href="product.html" class="text-decoration-none">Products</a></li>
+              <li><a href="#" class="text-decoration-none">Products</a></li>
               <li id="get-in-touch">Get in touch 
                 <svg width="20" height="25" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.83789 2.9541L13.1259 8.24214L7.83789 13.5302" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
