--- a/home.html
+++ b/home.html
@@ -310,15 +310,12 @@
                     <h4>INDUSTRIES WE WORK WITH</h4>
                 </div>
                 <div class="industries-list text-white">
-                    <p>Automobile</p>
-                    <p>Pharam</p>
-                    <p>Mining</p>
-                    <p>Hospitality</p>
-                    <p>Manufacturing</p>
-                    <p>Legal</p>
-                    <p>Medical</p>
-                    <p>FMCG</p>
-                    <p>Accounting</p>
+                    <p>Information Technology</p>
+                    <p>Gaming Industry</p>
+                    <p>Consumer Electronics</p>
+                    <p>Embedded Systems</p>
+                    <p>Mobile Technology</p>
+                    <p>Computer peripheral device</p>
                 </div>
                 <div class="connect text-center">
                     <h2>How can we help you? Let's connect.</h2>
