--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Indilogic</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/inner-page.css">
@@ -72,7 +72,7 @@
                             <div class="flip-box-inner">
                                 <div class="service-box">
                                     <img src="image/service-b-1.png" alt="Service Image">
-                                    <h5>On time delivery</h5>
+                                    <h5>Customized solutions</h5>
                                     <div class="arrow">
                                         <svg width="15" height="18" viewBox="0 0 15 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M1 1.69141H13.1318" stroke="#636363" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
