service page changes

--- a/service.html
+++ b/service.html
@@ -142,8 +142,8 @@
                 </div>
                 <div class="row pt-4 gy-4">
                     <div class="col-md-4 d-flex">
-                        <div class="our-service" >
-                            <div class="arrow" data-popup="popup-1">
+                        <div class="our-service" data-popup="popup-1">
+                            <div class="arrow" >
                                 <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
                                     <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
@@ -180,8 +180,8 @@
                         </div>
                     </div>
                     <div class="col-md-8 d-flex">
-                        <div class="our-service px-md-5" >
-                            <div class="arrow" data-popup="popup-2">
+                        <div class="our-service px-md-5" data-popup="popup-2" >
+                            <div class="arrow" >
                                 <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
                                     <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 d-flex">
-                        <div class="our-service px-md-5" >
+                        <div class="our-service px-md-5" data-popup="popup-3">
                             <div class="arrow" data-popup="popup-3">
                                 <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
@@ -271,8 +271,8 @@
                         </div>
                     </div>
                     <div class="col-md-4 d-flex">
-                        <div class="our-service" >
-                            <div class="arrow" data-popup="popup-4">
+                        <div class="our-service" data-popup="popup-4">
+                            <div class="arrow">
                                 <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2.30859 0.896954C1.6994 0.896954 1.20555 1.3908 1.20555 2C1.20555 2.6092 1.6994 3.10305 2.30859 3.10305V0.896954ZM2.30859 3.10305H18.5699V0.896954H2.30859V3.10305Z" fill="#1E1E1E"/>
                                     <path d="M16.5234 19.0006C16.5188 19.6219 17.0188 20.1302 17.6402 20.1358C18.2615 20.1414 18.7689 19.6423 18.7735 19.0209L16.5234 19.0006ZM18.7735 19.0209L18.8987 2.01043L16.6486 1.99007L16.5234 19.0006L18.7735 19.0209Z" fill="#1E1E1E"/>
