--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
               <li><a href="about.html" class="text-decoration-none">About</a></li>
               <li><a href="service.html" class="text-decoration-none">Services</a></li>
               <li><a href="product.html" class="text-decoration-none">Products</a></li>
-              <li id="get-in-touch">Get in touch 
+              <li id="get-in-touch"><a href="contact.html">Get in touch 
                 <svg width="20" height="25" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.83789 2.9541L13.1259 8.24214L7.83789 13.5302" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M13.1249 8.24213L1.875 8.24213" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+                </svg></a>
               </li>
             </ul>
           </nav>
@@ -56,35 +56,31 @@
                     <h3>At IndiLogic LLC (USA), we are committed to delivering high-quality products and services to our clients. </h3>
                 </div>
 
-                <div class="row mt-5">
-                    <div class="col-md-6 d-lg-block d-none">
+                <div class="row mt-5 align-items-center">
+                    <div class="col-md-6">
+                        <img src="./image/a-2.png" class="w-100">
+                    </div>
+                    <div class="col-md-6">
                         <div class="about-text">
                             <p>Established in 2012 in Texas, USA, we have dedicated years to achieving excellence in Windows application development, embedded applications, and firmware development. As a privately funded and privately owned company, we have experienced exponential growth, generating multimillion-dollar revenues.</p>
                         </div>
-                        <img src="./image/a-1.png" class="w-100 mt-5 ">
                     </div>
-                    <div class="col-md-6 d-lg-block d-none">
-                        <img src="./image/a-2.png" class="w-100 mb-5">
-                        <div class="about-text">
+                </div>
+            </div>
+        </section>
+
+        <section class="intro">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <div class="about-text text-white">
                             <h4>Mehul Patel (CEO and CTO)</h4>
                             <p>Bringing over 25 years of leadership experience in the tech industry. With a strong background in engineering, business development, and strategic planning, Mehul has successfully led IndiLogic for decades. His visionary leadership is dedicated to driving IndiLogic to new heights</p>
                             <p class="pt-3">His leadership has been instrumental in developing IndiLogic's flagship products, ensuring they are robust, reliable, and future-ready. Outside of work, Mehul is an avid coder who enjoys mentoring young engineers. He firmly believes in the power of technology to change the world and is continually exploring new ways to innovate and inspire the next generation of tech leaders</p>
                         </div>
                     </div>
-                    <div class="col-12 d-lg-none d-block">
-                        <img src="./image/a-2.png" class="w-100 mt-5 ">
-                        <div class="about-text pt-4 ">
-                            <p class="text-center mw-100">Established in 2012 in Texas, USA, we have dedicated years to achieving excellence in Windows application development, embedded applications, and firmware development.</p>
-                            <p class="text-center mw-100">As a privately funded and privately owned company, we have experienced exponential growth, generating multimillion-dollar revenues.</p>
-                        </div>
-                    </div>
-                    <div class="col-12 d-lg-none d-block pt-5">
+                    <div class="col-md-6">
                         <img src="./image/a-1.png" class="w-100 mb-5">
-                        <div class="about-text text-center">
-                            <h4>Mehul Patel (CEO and CTO)</h4>
-                            <p class="mw-100">Bringing over 25 years of leadership experience in the tech industry. With a strong background in engineering, business development, and strategic planning, Mehul has successfully led IndiLogic for decades. His visionary leadership is dedicated to driving IndiLogic to new heights</p>
-                            <p class="mw-100 pt-3">His leadership has been instrumental in developing IndiLogic's flagship products, ensuring they are robust, reliable, and future-ready. Outside of work, Mehul is an avid coder who enjoys mentoring young engineers. He firmly believes in the power of technology to change the world and is continually exploring new ways to innovate and inspire the next generation of tech leaders</p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -159,7 +155,7 @@
             </div>
         </section>
 
-        <section class="four-sec about-sussess">
+        <!-- <section class="four-sec about-sussess">
             <div class="container">
                 <div class="common-title text-white">
                     <h4>SUCCESS  STORY </h4>
@@ -189,6 +185,13 @@
                         <p>Seamlessly connects Bluetooth devices to Dell systems, providing a hassle-free user experience for connectivity</p>
                     </div>
                 </div>
+            </div>
+        </section> -->
+
+        <section class="achievement">
+            <div class="container text-center">
+                <h2>OUR ACHIEVEMENT</h2>
+                <p>At IndiLogic LLC, we bring over 15 years of expertise in delivering top-quality products that consistently exceed industry expectations. As a trusted strategic partner with Dell Technologies, we have successfully launched innovative products now used by over 16 million users worldwide. This collaboration highlights our relentless pursuit of excellence and our proven ability to scale impactful solutions that meet the ever-evolving needs of the global market.</p>
             </div>
         </section>
 
