--- a/product.html
+++ b/product.html
@@ -134,7 +134,7 @@
                 <div class="container">
                     <div class="row align-items-center text-white  flex-lg-row-reverse gy-4 gy-lg-0">
                         <div class="col-xl-6 col-lg-5 pe-lg-4">
-                            <div class="image">
+                            <div class="image mouse">
                                 <img src="image/product-4.png" class="w-100">
                             </div>
                         </div>
