--- a/about.html
+++ b/about.html
@@ -195,6 +195,11 @@
             </div>
         </section>
 
+        <section class="future-image">
+            <img src="image/image 1.png" class="w-100">
+            <h2>Together, we build the future.</h2>
+        </section>
+
         <section class="dell">
             <div class="container">
                 <div class="row align-items-center">
