--- a/product.html
+++ b/product.html
@@ -209,11 +209,11 @@
                                 <div class="f-menu">
                                     <h5 class="f-title">Navigation</h5>
                                     <ul class="m-0 p-0">
-                                        <li><a href="#" class="text-decoration-none">Home</a></li>
-                                        <li><a href="#" class="text-decoration-none">About us</a></li>
-                                        <li><a href="#" class="text-decoration-none">Services</a></li>
-                                        <li><a href="#" class="text-decoration-none">products</a></li>
-                                        <li><a href="#" class="text-decoration-none">Contact us</a></li>
+                                        <li><a href="home.html" class="text-decoration-none">Home</a></li>
+                                        <li><a href="about.html" class="text-decoration-none">About us</a></li>
+                                        <li><a href="service.html" class="text-decoration-none">Services</a></li>
+                                        <li><a href="product.html" class="text-decoration-none">products</a></li>
+                                        <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
                                         <li><a href="#" class="text-decoration-none">Trademark Disclaimer</a></li>
                                     </ul>
