--- a/service.html
+++ b/service.html
@@ -241,7 +241,7 @@
                         <div class="popup-overlay" id="popup-3">
                             <div class="popup-content container">
                                 <span class="close-btn">&times;</span>
-                                <h4>Custom Firmware Development </h4>
+                                <h4>Firmware/IoT Development</h4>
                                 <p>We design and develop bespoke firmware for a variety of microcontroller architectures and families, ensuring that your specific hardware requirements are met with precision. Our expertise spans across popular platforms including Nordic, STMicroelectronics, Intel, NXP Coldfire, Kinetis, Renesas, Microchip, Atmel, Qualcomm, and any Linux/Android-based microcontroller.</p>
                                 <p>We adapt to the unique needs of each platform, delivering firmware that drives your hardware to its full potential while maintaining highstandards of reliability and efficiency.</p>
                                 <div class="row gy-4">
@@ -454,11 +454,11 @@
                                 <div class="f-menu">
                                     <h5 class="f-title">Navigation</h5>
                                     <ul class="m-0 p-0">
-                                        <li><a href="#" class="text-decoration-none">Home</a></li>
-                                        <li><a href="#" class="text-decoration-none">About us</a></li>
-                                        <li><a href="#" class="text-decoration-none">Services</a></li>
-                                        <li><a href="#" class="text-decoration-none">products</a></li>
-                                        <li><a href="#" class="text-decoration-none">Contact us</a></li>
+                                        <li><a href="home.html" class="text-decoration-none">Home</a></li>
+                                        <li><a href="about.html" class="text-decoration-none">About us</a></li>
+                                        <li><a href="service.html" class="text-decoration-none">Services</a></li>
+                                        <li><a href="product.html" class="text-decoration-none">products</a></li>
+                                        <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
                                         <li><a href="#" class="text-decoration-none">Trademark Disclaimer</a></li>
                                     </ul>
