--- a/about.html
+++ b/about.html
@@ -240,10 +240,10 @@
                     <div class="col-md-6 first-sec-footer">
                         <img src="image/logo.png" class="logo">
                         <div class="social-icon d-md-block d-none">
-                            <a href="#"><img src="image/Facebook.png"></a>
-                            <a href="#"><img src="image/Linkedin.png"></a>
-                            <a href="#"><img src="image/Twitter.png"></a>
-                            <a href="#"><img src="image/Instagram.png"></a>
+                            <a href="https://www.facebook.com/IndiLogic/"><img src="image/Facebook.png"></a>
+                            <a href="https://www.linkedin.com/company/indilogic/"><img src="image/Linkedin.png"></a>
+                            <a href="https://x.com/indilogicllc"><img src="image/Twitter.png"></a>
+                            <a href="https://www.instagram.com/indilogic_llc/"><img src="image/Instagram.png"></a>
                         </div>
                     </div>
                     <div class="col-md-6">
